[project]
name = "agent-lecture"
version = "0.1.0"
description = "Agent lecture materials"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langchain-openai",
    "langchain-core",
    "langsmith",
    "langchain-classic",
    "langchain-community",
    "grandalf",
    "tavily-python",
    "ipykernel",
    "jupyter",
    "langgraph",
    "schedule>=1.2.2",
    "finance-datareader>=0.9.202",
    "opendartreader>=0.2.3",
    "langchain-ollama>=1.1.0",
    "openpyxl>=3.1.5",
    "tqdm>=4.68.3",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.15.0",
]
