[project]
name = "agent-lecture"
version = "0.1.0"
description = "Agent lecture materials"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langchain-openai",
    "langchain-core",
    "langsmith",
    "langchain-classic",
    "langchain-community",
    "grandalf",
    "tavily-python",
    "ipykernel",
    "jupyter",
    "langgraph",
    "schedule>=1.2.2",
    "finance-datareader>=0.9.202",
    "opendartreader>=0.2.3",
    "langchain-ollama>=1.1.0",
    "openpyxl>=3.1.5",
    "tqdm>=4.68.3",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.15.0",
    "chainlit>=2.11.1",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.3.4",
    "psycopg-pool>=3.3.1",
    "sentence-transformers>=3.0.1",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "pillow>=10.4.0",
    "chromadb>=0.5.0",
]
